replace List.of for Arrays.asList